force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/SVMXA360__CONF_TA_TemplateMatchRule__c.object-meta.xml
<CustomObject>
    <description>This object holds the sequence and the rule to match the template with the object field.</description>
    <label>Technical Attribute Template Match Rule</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Attribute Template Match Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>