force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__AdvancedCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdvancedCriteria__c</fullName>
    <description>Stores the expression value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>