force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__AdvancedCriteriaType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdvancedCriteriaType__c</fullName>
    <description>Refers a global value set, indicating the selected criteria for expression evaluation</description>
    <label>Advanced Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__AdvancedCriteriaType</valueSetName>
    </valueSet>
</CustomField>