force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>Unique Id generated to identify template match rule records</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id generated to identify template match rule records</inlineHelpText>
    <label>Developer Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>