force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldApiName__c</fullName>
    <description>API name of the field on which the rule has to be applied</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of the field on which the rule has to be applied</inlineHelpText>
    <label>Object&apos;s Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>