force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__FieldDataType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldDataType__c</fullName>
    <description>This field indicates the Data Type of the field on which the match rule is configured.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field indicates the Data Type of the field on which the match rule is configured.</inlineHelpText>
    <label>Field Data Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>