force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__MatchRuleCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MatchRuleCriteria__c</fullName>
    <description>Criteria amongst the detail match rule records</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Match Rule Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>