force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__MatchRuleMaster__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MatchRuleMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self lookup, indicating the parent match rule record to which it is part of.</description>
    <label>Match Rule Master</label>
    <referenceTo>SVMXA360__CONF_TA_TemplateMatchRule__c</referenceTo>
    <relationshipLabel>Technical Attribute Template Match Rules</relationshipLabel>
    <relationshipName>Technical_Attribute_Template_Match_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>