force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectApiName__c</fullName>
    <description>API Name of the object on which the template match rule has to be applied</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API Name of the object on which the template match rule has to be applied</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>