force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__OperandObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperandObjectApiName__c</fullName>
    <description>API name of the target object against which the match has to be made</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of the target object against which the match has to be made</inlineHelpText>
    <label>Operand Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>