force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__ReferenceFieldsLabel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReferenceFieldsLabel__c</fullName>
    <description>Stores the fields and related fields being referred in the expression</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Fields Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>