force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__RelatedObjectDetail__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RelatedObjectDetail__c</fullName>
    <description>This field holds the Object reference for the asset field selected for each detail record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Object Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>