force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/fields/SVMXA360__RuleName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RuleName__c</fullName>
    <description>Short description of the rule</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>