force-app/main/default/objects/SVMXA360__CONF_TA_TemplateMatchRule__c/listViews/SVMXA360__All.listView-meta.xml
<ListView>
    <fullName>SVMXA360__All</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__RuleName__c</columns>
    <columns>SVMXA360__Sequence__c</columns>
    <columns>SVMXA360__RuleType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
</ListView>